--- a/portal/src/app/app.component.html
+++ b/portal/src/app/app.component.html
@@ -1,7 +1,7 @@
 <br/>
 
 <mat-form-field appearance="fill" id="search">
-  <input matInput type="text" (keyup)="doFilter($event)" placeholder="Filter" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)">
+  <input matInput type="text" (keyup)="doFilter($event)" placeholder="Filter" onkeypress="onlyNumber($event)">
 </mat-form-field>
 <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)" class="mat-elevation-z8">
   <ng-container matColumnDef="startWeek">
@@ -61,5 +61,7 @@
 <br/>
 <br/>
 <div id="paginator">
-  <button mat-raised-button (click)="paginator(false)">Anterior</button><span style="margin-left: 70%"><button mat-raised-button  (click)="paginator(true)">Siguiente</button></span>
+  <button mat-raised-button (click)="paginator(false)" *ngIf="beforeButton">Anterior</button><span style="margin-left: 70%"><button mat-raised-button  (click)="paginator(true)" *ngIf="afterButton">Siguiente</button></span>
 </div>
+
+<app-graph [daily] = "daily" [weekly] = "weekly"></app-graph>
