--- a/portal/src/app/app.component.html
+++ b/portal/src/app/app.component.html
@@ -1,12 +1,38 @@
+<div class="my-overlay" *ngIf="showOverlay">
+  <i class="fa fa-spinner fa-spin" aria-hidden="true"></i>
+</div>
 <br/>
+<div id="panelFilter">
+  <div id="filter">
+  <mat-form-field appearance="fill" style="width: 80%;">
+    <input matInput type="text" (keyup)="doFilter($event)" placeholder="Filtro" onkeypress="onlyNumber($event)">
+  </mat-form-field>
+  </div>
+  <div id="filter">
+    <span>
+      <mat-form-field appearance="fill" style="width: 70%; margin-right: 20px;">
+        <mat-label>Ingresa un rango de fechas</mat-label>
+        <mat-date-range-input [formGroup]="range" [rangePicker]="picker">
+          <input matStartDate formControlName="start" placeholder="Start date">
+          <input matEndDate formControlName="end" placeholder="End date">
+        </mat-date-range-input>
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-date-range-picker #picker></mat-date-range-picker>
+        <mat-error *ngIf="range.controls['start'].hasError('matStartDateInvalid')">Fecha de inicio invalida</mat-error>
+        <mat-error *ngIf="range.controls['end'].hasError('matEndDateInvalid')">Fecha de fin invalida</mat-error>
+      </mat-form-field>
+    </span>
+    <span>
+      <button mat-raised-button (click)="find()">Buscar</button>
+    </span>
+  </div>
+ 
+</div>
 
-<mat-form-field appearance="fill" id="search">
-  <input matInput type="text" (keyup)="doFilter($event)" placeholder="Filter" onkeypress="onlyNumber($event)">
-</mat-form-field>
 <table mat-table [dataSource]="dataSource" matSort (matSortChange)="announceSortChange($event)" class="mat-elevation-z8">
   <ng-container matColumnDef="startWeek">
     <th mat-header-cell mat-sort-header *matHeaderCellDef> Fecha Inicio Semana </th>
-    <td mat-cell *matCellDef="let element"> {{element.startWeek | date: 'd/MM/yyyy'}} </td>
+    <td mat-cell *matCellDef="let element"> {{element.startWeek}} </td>
   </ng-container>
 
   <ng-container matColumnDef="numberWeek">
